# Marigold

./: .gitignore  CONTRIBUTING.md  LICENSE-MODEL.txt  README.md  app.py  environment.yaml  eval.py  infer.py  pyproject.toml  requirements++.txt  requirements+.txt  requirements-lock.txt  requirements.txt  run.py  setup.py  train.py
.github/workflows/: pr_ruff.yml
config/: logging.yaml  model_sdv2.yaml  train_debug.yaml  train_debug_depth.yaml  train_debug_iid.yaml  train_debug_normals.yaml  train_marigold.yaml  train_marigold_depth.yaml  train_marigold_depth_LCM.yaml  train_marigold_iid_appearance.yaml  train_marigold_iid_lighting.yaml  train_marigold_normals.yaml  wandb.yaml
config/dataset/: data_diode_all.yaml  data_eth3d.yaml  data_hypersim_train.yaml  data_hypersim_val.yaml  data_kitti_eigen_test.yaml  data_kitti_val.yaml  data_nyu_test.yaml  data_nyu_train.yaml  data_scannet_val.yaml  data_vkitti_train.yaml  data_vkitti_val.yaml  dataset_train.yaml  dataset_val.yaml  dataset_vis.yaml
config/dataset_depth/: data_diode_all.yaml  data_eth3d.yaml  data_hypersim_train.yaml  data_hypersim_val.yaml  data_kitti_eigen_test.yaml  data_kitti_val.yaml  data_nyu_test.yaml  data_nyu_train.yaml  data_scannet_val.yaml  data_vkitti_train.yaml  data_vkitti_val.yaml  dataset_train.yaml  dataset_val.yaml  dataset_vis.yaml
config/dataset_iid/: data_lighting_hypersim_test.yaml  (+7 more)
marigold/: __init__.py  marigold_depth_pipeline.py  marigold_iid_pipeline.py  marigold_normals_pipeline.py  marigold_pipeline.py
script/: download_sample_data.sh  download_weights.sh
src/: __init__.py
(+165 files in other folders)
