[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "marigold"
version = "0.0.1"
description = "Marigold: Repurposing Diffusion-Based Image Generators for Monocular Depth Estimation"
classifiers = [
  "Programming Language :: Python :: 3"
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate",
  "diffusers>=0.20.1",
  "matplotlib",
  "numpy>=1.26.1",
  "opencv-python",
  "scipy>=1.11.3",
  "tensorboard",
  "torch>=2.0.1",
  "torchvision>=0.15.2",
  "tqdm",
  "transformers>=4.32.1",
  "xformers>=0.0.21",
]
